--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,39 @@
-body {
-    background-color: skyblue;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+html,body {
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    color: #121417;
+}
+
+h2{
+    @apply font-bold
+}
+
+a {
+    color: #D57275;
+    text-decoration: none;
+}
+
+.submit-btn{
+    background-color: #D57275;
+    color: #fff;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+li{
+    text-decoration: none;
+}
+
+.landing_hero {
+    background-image: url('/public/images/landing.webp');
 }
