Fixes on Database, Checpoint form, UI improvements on said form, and login page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,9 @@
         {% endblock %}
     </head>
     <body class="antialiased">
+    {% if app.request.get('_route') != 'app_login' %}
         {{ include('partials/_navbar.html.twig') }}
+    {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
