--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div style="background-image: url({{roadtrip.coverImage}})" class="h-[50dvh] flex flex-col items-center justify-center relative gap-5 bg-center bg-cover bg-no-repeat">
+<div style="background-image: url('uploads/{{roadtrip.coverImage}}')" class="h-[50dvh] flex flex-col items-center justify-center relative gap-5 bg-center bg-cover bg-no-repeat">
 {# <div style="background-image: url({{asset('uploads/' ~ roadtrip.coverImage)}})" class="h-[50dvh] flex flex-col items-center justify-center relative gap-5 bg-center bg-cover bg-no-repeat"> #}
     <h1 class="text-white text-2xl md:text-4xl font-bold mt-5">{{ roadtrip.title }}</h1>
     
@@ -34,6 +34,14 @@
 
     <div class="mt-5 flex flex-col gap-5">
         <h2 class="text-primary-red text-xl md:text-3xl">Mes arrêts</h2>
+
+        {% for checkpoint in roadtrip.checkpoints %}
+            <div class="flex flex-col gap-5">
+                <p class="text-secondary-black">{{ checkpoint.googleMapsCoordinates }}</p>
+            </div>
+        {% else %}
+            <li>Aucun arrêt disponible.</li>
+        {% endfor %}
     </div>
 
     <div class="mt-5 flex flex-col gap-5">
