--- a/templates/profile/add.html.twig
+++ b/templates/profile/add.html.twig
@@ -15,7 +15,7 @@
 
     <div class="form-group space-y-2">
         {{ form_label(form.description, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
-        {{ form_widget(form.description, {'attr': {'class': 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm'}}) }}
+        {{ form_widget(form.description, {'attr': {'class': 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm wysiwyg'}}) }}
     </div>
 
     <div class="form-group space-y-2">
@@ -75,6 +75,18 @@
 
 {% block javascripts %}
 {{ parent() }}
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            console.log(ClassicEditor);
+            const elements = document.querySelectorAll('.wysiwyg');
+            elements.forEach((textarea) => {
+                ClassicEditor
+                    .create(textarea)
+                    .catch(error => console.error(error));
+            });
+        });
+    </script>
+
     <script>
 const initializeCheckpoints = () => {
     const checkpointsContainer = document.querySelector('.checkpoints-list');
