--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -20,7 +20,7 @@
         <p>Waw est une plateforme qui vous permet de créer et de partager vos roadtrips. Voici comment ça marche.</p>
 
 
-<ul class="mx-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-7">
+<ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-7">
   <li class="flex flex-col gap-5 w-auto rounded-md border border-[#E0E0E0] p-4">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/></svg>
     <h3 class="font-bold text-xl">Créer votre journal</h3>
@@ -65,7 +65,7 @@
     <section class="flex flex-col gap-5 mt-10 items-center">
     
         <h2 class="text-xl md:text-2xl font-bold">Prêt à partager votre voyage ?</h2>
-                <a class="px-7 py-2 rounded-full bg-primary-red text-white outline-2 outline-primary-red hover:outline-primary-red hover:outline hover:bg-transparent transition-all hover:cursor-pointer" href={{path('app_registration')}}>
+                <a class="px-7 py-2 rounded-full bg-primary-red text-white outline-2 outline-primary-red hover:outline-primary-red hover:outline hover:bg-transparent transition-all hover:cursor-pointer hover:text-primary-red" href={{path('app_registration')}}>
         Inscrivez-vous - C'est gratuit !</a>
     </section>
 
