--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -29,7 +29,7 @@
       <!-- Texte "Déjà inscrit ?" -->
       <p class="text-primary-black mb-6">
         Déjà inscrit ? 
-        <a href="#" class="text-primary-red hover:underline">Connectez-vous</a>
+        <a href={{ path('app_login') }} class="text-primary-red hover:underline">Connectez-vous</a>
       </p>
       <!-- Formulaire -->
       {{ form_start(form) }}
