--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -20,13 +20,13 @@
         {% if app.user %}
             <div class="w-full flex justify-end gap-5 items-center sm:ml-auto">
                 <li>
-                    <a href="{{ path('app_add_roadtrip') }}" class="text-gray-800 hover:text-blue-500">
+                    <a href="{{ path('app_add_roadtrip') }}" class="text-gray-800 hover:text-primary-red">
                         Créer un roadtrip
                     </a>
                 </li>
 
                 <li id="profile_icon" class="relative">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user cursor-pointer text-gray-800 hover:text-blue-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user cursor-pointer text-gray-800 hover:text-primary-red">
                         <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/>
                         <circle cx="12" cy="7" r="4"/>
                     </svg>
