--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -16,7 +16,7 @@
         <h2 class="text-2xl font-bold mb-4">Votre dernier roadtrip</h2>
         <div class="relative rounded-md border border-[#E0E0E0] overflow-hidden">
             <!-- Image de couverture -->
-            <img src="{{ lastRoadtrip.coverImage }}" alt="{{ lastRoadtrip.title }}"
+            <img src="uploads/{{ lastRoadtrip.coverImage }}" alt="{{ lastRoadtrip.title }}"
                 class="w-full h-48 sm:h-64 object-cover">
             <!-- Détails -->
             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-4 text-white">
